# commission-calculator

./: .gitignore  README.md  app.py  calculator_app.py  pyproject.toml
config/: config_loader.py  generate_config_str.py
modules/: calculator.py
pages/: 1_Commission_Calculator.py
